# hivemind

./: .gitignore  AGENTS.md  CLEANUP.md  LICENSE  README.md  config.yaml.example  install.sh  main.py  patch.diff  pyproject.toml  run_tests.sh  setup.sh
.agents/: testing_conventions.md
.github/workflows/: test.yml
.roo/: mcp.json
.roo/rules/: 01-workflow-rules.md
.roo/skills/git-workflow/: SKILL.md
cli/: ask_command.py  features_command.py  indexer_commands.py  project_commands.py  run_indexer.py  scout_commands.py  search_command.py  server_commands.py  setup.py  web_search_command.py
core/: clients.py  complexity.py  config.py  filesystem.py  language_support.py  planner.py  rag.py  search.py  secrets.py
docs/: api.adoc  api.md  architecture.adoc  architecture.md  cli.adoc  cli.md  configuration.adoc  configuration.md  deployment.adoc  deployment.md  index.adoc  indexer.adoc  scout.adoc  troubleshooting.adoc  troubleshooting.md
indexer/: code_handler.py  git_utils.py  index_worker.py  state.py  watcher.py
indexer/chunkers/: __init__.py  ast.py  base.py  by_lines.py  by_size.py  hybrid_ast.py  markdown.py
indexer/chunkers/markup/: __init__.py  asciidoc_chunker.py  base.py  css_chunker.py  html_chunker.py  json_chunker.py  scss_chunker.py  xml_chunker.py
indexer/preprocessors/: base.py  docx.py  manager.py  pdf.py  text.py
infra/: compose.yml
openspec/changes/hivemind-kirigami-ui/: README.md  design.md  proposal.md  tasks.md
openspec/changes/hivemind-kirigami-ui/specs/dashboard/: spec.md
openspec/changes/hivemind-kirigami-ui/specs/indexer-monitoring/: spec.md
openspec/changes/hivemind-kirigami-ui/specs/mcp-server-control/: spec.md
openspec/changes/hivemind-kirigami-ui/specs/repository-management/: spec.md
openspec/changes/hivemind-kirigami-ui/specs/semantic-search-ui/: spec.md
openspec/changes/hivemind-kirigami-ui/specs/settings-management/: spec.md
plans/: top-features-implementation.md
scout/: __init__.py  chunk_cache.py  chunk_formatter.py  crawler.py  manager.py
server/: api.py  server.py
tests/: conftest.py  test_preprocessors.py
tests/test_core/: test_clients.py  test_complexity.py  test_config.py  test_filesystem.py  test_planner.py  test_search.py  test_secrets.py
tests/test_indexer/: test_git_utils.py  test_state.py  test_watcher.py
tests/test_indexer/test_chunkers/: test_ast.py  test_base.py  test_by_lines.py  test_by_size.py  test_markdown.py
tests/test_integration/: __init__.py  test_indexing_pipeline.py
tests/test_scout/: test_chunk_cache.py  test_chunk_formatter.py  test_crawler.py  test_manager.py
tests/test_server/: test_api.py  test_server.py
ui/: .gitignore  QUICKSTART.md  README.md  __init__.py  main.py  org.hivemind.ui.desktop  pyproject.toml  run.sh
ui/backend/: __init__.py  engine.py
ui/backend/managers/: __init__.py  config_manager.py  search_manager.py  server_manager.py
ui/backend/models/: __init__.py  repo_list_model.py  search_results_model.py
ui/backend/workers/: __init__.py  index_worker.py  search_worker.py
ui/qml/: main.qml
ui/qml/components/: RepoDelegate.qml  SearchResultDelegate.qml  StatusCard.qml
ui/qml/dialogs/: AddRepoSheet.qml  ServerLogSheet.qml
ui/qml/pages/: DashboardPage.qml  IndexerPage.qml  RepositoriesPage.qml  SearchPage.qml  ServerPage.qml  SettingsPage.qml
ui/resources/: resources.qrc
ui/tests/: __init__.py  test_managers.py  test_models.py
