[project]
name = "hivemind"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.8.6",
    "fastapi>=0.115.0",
    "mcp>=1.0.0",
    "openai>=2.32.0",
    "pathspec>=1.1.0",
    "playwright>=1.58.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pypdf>=6.10.2",
    "pyyaml>=6.0.0",
    "qdrant-client>=1.17.1",
    "rich>=13.0.0",
    "tenacity>=9.1.4",
    "tree-sitter>=0.25.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-hcl>=1.2.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-yaml>=0.7.2",
    "typer>=0.12.0",
    "uvicorn>=0.32.0",
    "watchdog>=6.0.0",
]

[project.scripts]
hivemind = "main:cli"

[tool.setuptools]
packages = ["indexer", "indexer.chunkers", "indexer.preprocessors", "core", "server", "cli", "scout"]
py-modules = ["main"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
