[project]
name = "hivemind"
version = "0.1.4"
description = "Semantic code indexer, search tool, and MCP server for AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0.0",
    "ddgs>=9.14.1",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "mcp>=1.0.0",
    "openai>=2.32.0",
    "pathspec>=1.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pypdf>=6.10.2",
    "pyyaml>=6.0.0",
    "qdrant-client>=1.17.1",
    "rich>=13.0.0",
    "tenacity>=9.1.4",
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.2",
    "tree-sitter-c-sharp>=0.23.5",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-hcl>=1.2.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-yaml>=0.7.2",
    "typer>=0.12.0",
    "uvicorn>=0.32.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
web = [
    "ddgs>=9.0",
]
scout = [
    "crawl4ai>=0.8.6",
    "ddgs>=9.0",
    "playwright>=1.58.0",
]

[project.scripts]
hivemind = "main:cli"

[tool.setuptools]
packages = ["indexer", "indexer.chunkers", "indexer.preprocessors", "core", "server", "cli", "scout"]
py-modules = ["main"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that interact with real services",
    "asyncio: async tests (provided by pytest-asyncio)",
]
